Make the width stretch to fix the current container

--- a/components/Key/Key.scss
+++ b/components/Key/Key.scss
@@ -8,7 +8,7 @@
 
     &-#{$index} {
       display: flex;
-      width: 50px;
+      width: 100%;
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
