--- a/components/Xylophone/Xylophone.scss
+++ b/components/Xylophone/Xylophone.scss
@@ -7,10 +7,8 @@
 
 .Key {
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   align-items: center;
-}
-
-.SeparateKeys {
   margin: spacing(extraTight);
 }
